# legotrains

./: .gitignore  AGENTS.md  README.md  bt.py  motortest.py  pyproject.toml  requirements.txt  run.sh
doc/: PRD.md
doc/ai/: DESIGN.md  PLAN.md
experiments/: bleakscanner.py  bt.py  moo.py  moo2.py  motortest.py  textual-test.py
src/legotrains/: __init__.py  config.py  control_commands.py  control_input.py  hardware_connection.py  hardware_registry.py  hardware_scanner.py  main.py  runtime.py  state.py  telemetry.py
src/legotrains/hardware/: bleak_backend.py  pylgbst_adapter.py
src/legotrains/programs/: __init__.py
src/legotrains/programs/examples/: start_all.py
src/legotrains/programs/tasks/: stop_and_go.py
src/legotrains/ui/: app.py  widgets.py
tests/: __init__.py  conftest.py  test_config.py  test_control_commands.py  test_control_input.py  test_hardware_connection.py  test_hardware_registry.py  test_hardware_scanner.py  test_programs.py  test_pylgbst_adapter.py  test_runtime.py  test_state.py  test_telemetry.py  test_ui_app.py  test_ui_widgets.py
